fixing body overflow

--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,11 @@
     outline: none;
 }
 
-body {
+html, body {
     font-family: "Roboto", sans-serif;
     color: #272727;
     overflow-x: hidden;
+    width: 100%;
 }
 
 header {
